--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <title>Food 4 you</title>
    <link href="css/reset.css" rel="stylesheet" type="text/css">
+   <link rel="stylesheet" href="css/flickity.min.css">
    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -34,18 +35,18 @@
                <li class="navbar-nav-row__li"><a href="#">contact us</a></li>
             </ul>
          </nav>
-      </div>      
+      </div>
       <div class="header__hero">
          <div class="hero-block">
             <div class="hero-block__article">
                <div class="hero-article">
                   <div class="hero-article__question">Are You Hungry?</div>
                   <div class="hero-article__title">Don't Wait!</div>
-                  <h1 class="hero-article__subtitle">Let start to order food now</р>
+                  <h1 class="hero-article__subtitle">Let start to order food now</h1>
                   <div class="hero-article__line"></div>
                   <div class="hero-article__sale">
                      <div class="hero-article__sale-left-text">This Monday Happy Hours</div>
-                     <div class="hero-article__sale-right-text">1+1=3</div>                    
+                     <div class="hero-article__sale-right-text">1+1=3</div>
                   </div>
                   <button class="hero-article__order-btn">Order Now</button>
                </div>
@@ -56,12 +57,20 @@
             <div class="hero-block__decorations">
                <div class="hero-decorations">
                   <div class="hero-decorations__leaf">
-                     
+                     <!--bg -->
                   </div>
-                  <div class="hero-decorations__tomat"><!--bg --></div>
-                  <div class="hero-decorations__pasta"><!--bg --></div>
-                  <div class="hero-decorations__leaf2"><!--bg --></div>
-                  <div class="hero-decorations__round-spaghetti"><!--bg --></div>
+                  <div class="hero-decorations__tomat">
+                     <!--bg -->
+                  </div>
+                  <div class="hero-decorations__pasta">
+                     <!--bg -->
+                  </div>
+                  <div class="hero-decorations__leaf2">
+                     <!--bg -->
+                  </div>
+                  <div class="hero-decorations__round-spaghetti">
+                     <!--bg -->
+                  </div>
                </div>
             </div>
          </div>
@@ -69,23 +78,31 @@
    </header>
    <section class="top-dishes">
       <div class="top-dishes__title">Choose & Enjoy</div>
-      <div class="top-dishes__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-      aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</div>
+      <div class="top-dishes__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+         incididunt ut labore et dolore magna
+         aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+      </div>
       <div class="top-dishes__items">
          <div class="dish-item">
-            <div class="dish-item__image"></div>
+            <div class="dish-item__image">
+               <div class="dish-image-1"></div>
+            </div>
             <div class="dish-item__title">Lorem ipsum dolor</div>
             <div class="dish-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</div>
             <button class="dish-item__order-btn">Order Now</button>
          </div>
          <div class="dish-item">
-            <div class="dish-item__image"></div>
+            <div class="dish-item__image">
+               <div class="dish-image-2"></div>
+            </div>
             <div class="dish-item__title">Lorem ipsum dolor</div>
             <div class="dish-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</div>
             <button class="dish-item__order-btn">Order Now</button>
          </div>
          <div class="dish-item">
-            <div class="dish-item__image"></div>
+            <div class="dish-item__image">
+               <div class="dish-image-3"></div>
+            </div>
             <div class="dish-item__title">Lorem ipsum dolor</div>
             <div class="dish-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</div>
             <button class="dish-item__order-btn">Order Now</button>
@@ -93,28 +110,42 @@
       </div>
    </section>
    <section class="events">
-      <!-- carusel -->
+      <div class="events__pretitle">Discover</div>
+      <div class="events__title">Upcoming Events</div>
+      <div class="events__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</div>
+      <div class="events__carousel">
+
+            <div class="main-gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+               <div class="gallery-cell"></div>
+               <div class="gallery-cell"></div>
+               <div class="gallery-cell"></div>
+               <div class="gallery-cell"></div>
+               <div class="gallery-cell"></div>
+
+            </div>
+
+      </div>
    </section>
    <section class="try-today">
       <div class="try-today__block try-today__block-1">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
             <div class="try-block__title">Most Popular Pasta</div>
-            <div class="try-block__image"></div>
+            <div class="try-block__image try-block__image-1"></div>
          </div>
       </div>
       <div class="try-today__block try-today__block-2">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
             <div class="try-block__title">More fun more taste</div>
-            <div class="try-block__image"></div>
+            <div class="try-block__image try-block__image-2"></div>
          </div>
       </div>
       <div class="try-today__block try-today__block-3">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
             <div class="try-block__title">Fresh & chili</div>
-            <div class="try-block__image"></div>
+            <div class="try-block__image try-block__image-3"></div>
          </div>
       </div>
    </section>
@@ -128,7 +159,9 @@
    <footer class="footer">
       <div class="footer__logo"></div>
       <div class="footer__mid-row">
-         <div class="footer__mid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis.</div>
+         <div class="footer__mid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra
+            maecenas accumsan lacus vel facilisis.</div>
          <div class="footer__mid-placepoint">Main Road, Building Name, Country</div>
          <div class="footer__mid-mail">info@companyname.com</div>
       </div>
@@ -137,6 +170,7 @@
          <div class="footer__end-social-links"></div>
       </div>
    </footer>
+   <script src="js/flickity.pkgd.min.js"></script>
 </body>
 
 </html>
