--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="hero-block__article">
                <div class="hero-article">
                   <div class="hero-article__question">Are You Hungry?</div>
-                  <div class="hero-article__title">Don't Wait!</div>
+                  <div class="hero-article__title title">Don't Wait!</div>
                   <h1 class="hero-article__subtitle">Let start to order food now</h1>
                   <div class="hero-article__line"></div>
                   <div class="hero-article__sale">
@@ -77,7 +77,7 @@
       </div>
    </header>
    <section class="top-dishes">
-      <div class="top-dishes__title">Choose & Enjoy</div>
+      <div class="top-dishes__title title">Choose & Enjoy</div>
       <div class="top-dishes__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
          incididunt ut labore et dolore magna
          aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
@@ -111,7 +111,7 @@
    </section>
    <section class="events">
       <div class="events__pretitle">Discover</div>
-      <div class="events__title">Upcoming Events</div>
+      <div class="events__title title">Upcoming Events</div>
       <div class="events__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
          incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
          maecenas accumsan lacus vel facilisis.</div>
@@ -135,30 +135,28 @@
    </section>
    <section class="try-today">
       <div class="try-today__block try-today__block-1">
-         <div class="try-block">
-            <div class="try-block__pretitle">Try it today</div>
-            <div class="try-block__title">Most Popular Pasta</div>
-            <div class="try-block__image try-block__image-1"></div>
+         <div class="try-block try-block_big">
+            <div class="try-block__pretitle try-block__pretitle_big">Try it today</div>
+            <div class="try-block__title try-block__title_big">Most <br> Popular <br> Pasta</div>
          </div>
       </div>
       <div class="try-today__block try-today__block-2">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
-            <div class="try-block__title">More fun more taste</div>
-            <div class="try-block__image try-block__image-2"></div>
+            <div class="try-block__title">More fun <br> more taste</div>
          </div>
       </div>
       <div class="try-today__block try-today__block-3">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
             <div class="try-block__title">Fresh & chili</div>
-            <div class="try-block__image try-block__image-3"></div>
          </div>
       </div>
+      <div class="no-float"></div>
    </section>
    <section class="booking">
       <div class="booking__pretitle">Reservation</div>
-      <div class="booking__title">Book your table</div>
+      <div class="booking__title title">Book your table</div>
       <form action="#" class="booking__form">
 
       </form>
