--- a/index.html
+++ b/index.html
@@ -37,43 +37,38 @@
          </nav>
       </div>
       <div class="header__hero">
-         <div class="hero-block"></div>
-            <div class="hero-block__article">
-               <div class="hero-article">
-                  <div class="hero-article__question">Are You Hungry?</div>
-                  <div class="hero-article__title title">Don't Wait!</div>
-                  <h1 class="hero-article__subtitle">Let start to order food now</h1>
-                  <div class="hero-article__line"></div>
-                  <div class="hero-article__sale">
-                     <div class="hero-article__sale-left-text">This Monday Happy Hours</div>
-                     <div class="hero-article__sale-right-text">1+1=3</div>
-                  </div>
-                  <button class="hero-article__order-btn">Order Now</button>
-               </div>
+         <div class="hero-article">
+            <div class="hero-article__question">Are You Hungry?</div>
+            <div class="hero-article__title title">Don't Wait!</div>
+            <h1 class="hero-article__subtitle">Let start to order food now</h1>
+            <div class="hero-article__line"></div>
+            <div class="hero-article__sale">
+               <div class="hero-article__sale-left-text">This Monday Happy Hours</div>
+               <div class="hero-article__sale-right-text">1+1=3</div>
             </div>
-            <div class="hero-block__dish">
+            <button class="hero-article__order-btn">Order Now</button>
+         </div>
+         <div class="hero-dish">
+            <!--bg -->
+         </div>
+         <div class="hero-decorations">
+            <div class="hero-decorations__leaf">
                <!--bg -->
             </div>
-            <div class="hero-block__decorations">
-               <div class="hero-decorations">
-                  <div class="hero-decorations__leaf">
-                     <!--bg -->
-                  </div>
-                  <div class="hero-decorations__tomat">
-                     <!--bg -->
-                  </div>
-                  <div class="hero-decorations__pasta">
-                     <!--bg -->
-                  </div>
-                  <div class="hero-decorations__leaf2">
-                     <!--bg -->
-                  </div>
-                  <div class="hero-decorations__round-spaghetti">
-                     <!--bg -->
-                  </div>
-               </div>
+            <div class="hero-decorations__tomat">
+               <!--bg -->
+            </div>
+            <div class="hero-decorations__pasta">
+               <!--bg -->
+            </div>
+            <div class="hero-decorations__leaf2">
+               <!--bg -->
+            </div>
+            <div class="hero-decorations__round-spaghetti">
+               <!--bg -->
             </div>
          </div>
+
       </div>
    </header>
    <section class="top-dishes">
