--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <div class="header__navbar">
          <div class="navbar-top-row">
             <div class="navbar-top-row__logo">
-               <img src="/images/icons/Main-logo.png" alt="Main-logo">
+               <img src="images/icons/Main-logo.png" alt="Main-logo">
             </div>
             <div class="navbar-top-row__phone">
                <div class="navbar-phone">
                   <div class="navbar-phone__title">Express Delivery</div>
                   <div class="navbar-phone__number">1800 258 888</div>
                   <div class="navbar-phone__phone-pic">
-                     <img src="/images/icons/iPhone.png" alt="Phone">
+                     <img src="images/icons/iPhone.png" alt="Phone">
                   </div>
                </div>
             </div>
@@ -176,7 +176,7 @@
    </section>
    <footer class="footer">
       <div class="footer-rows footer__logo">
-         <img src="/images/icons/footer-logo.png" alt="Main-logo">
+         <img src="images/icons/footer-logo.png" alt="Main-logo">
       </div>
       <div class="footer-rows footer__mid-row">
          <div class="footer__mid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -190,10 +190,10 @@
       <div class="footer-rows footer__end-row">
          <div class="footer__end-copyright">© Company Name 2020. All rights reserved.</div>
          <div class="footer__end-social-links">
-            <a href="#"><img src="/images/icons/icon-instagram.png" alt="instagram"></a>
-            <a href="#"><img src="/images/icons/icon-facebook.png" alt="facebook"></a>
-            <a href="#"><img src="/images/icons/icon-twitter.png" alt="twitter"></a>
-            <a href="#"><img src="/images/icons/icon-whatsApp.png" alt="whatsApp"></a>
+            <a href="#"><img src="images/icons/icon-instagram.png" alt="instagram"></a>
+            <a href="#"><img src="images/icons/icon-facebook.png" alt="facebook"></a>
+            <a href="#"><img src="images/icons/icon-twitter.png" alt="twitter"></a>
+            <a href="#"><img src="images/icons/icon-whatsApp.png" alt="whatsApp"></a>
          </div>
       </div>
    </footer>
