--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
          <div class="navbar-top-row">
             <div class="navbar-top-row__logo">
                <img src="images/icons/Main-logo.png" alt="Main-logo">
+               <h1 >Food4you food for you Pizza restaurant</h1>
             </div>
             <div class="navbar-top-row__phone">
                <div class="navbar-phone">
-                  <div class="navbar-phone__title">Express Delivery</div>
-                  <div class="navbar-phone__number">1800 258 888</div>
+                  <h2 class="navbar-phone__title">Express Delivery</h2>
+                  <h2 class="navbar-phone__number">1800 258 888</h2>
                   <div class="navbar-phone__phone-pic">
                      <img src="images/icons/iPhone.png" alt="Phone">
                   </div>
@@ -30,7 +31,7 @@
          </div>
          <nav class="navbar-nav-row">
             <ul class="navbar-nav-row__ul">
-               <li class="navbar-nav-row__li"><a id="ti" href="#">home</a></li>
+               <li class="navbar-nav-row__li"><a href="#">home</a></li>
                <li class="navbar-nav-row__li"><a href="#">menu</a></li>
                <li class="navbar-nav-row__li"><a href="#">our story</a> </li>
                <li class="navbar-nav-row__li"><a href="#">contact us</a></li>
@@ -38,17 +39,17 @@
          </nav>
       </div>
       <div class="header__hero">
-         <div class="hero-article">
+         <article class="hero-article">
             <div class="hero-article__question">Are You Hungry?</div>
             <div class="hero-article__title title">Don't Wait!</div>
-            <h1 class="hero-article__subtitle">Let start to order food now</h1>
+            <h2 class="hero-article__subtitle">Let start to order food now</h2>
             <div class="hero-article__line"></div>
             <div class="hero-article__sale">
-               <div class="hero-article__sale-left-text">This Monday Happy Hours</div>
-               <div class="hero-article__sale-right-text">1+1=3</div>
+               <h3 class="hero-article__sale-left-text">This Monday Happy Hours</h3>
+               <h3 class="hero-article__sale-right-text">1+1=3</h3>
             </div>
             <button class="hero-article__order-btn">Order Now</button>
-         </div>
+         </article>
          <div class="hero-dish">
             <!--bg -->
          </div>
@@ -73,7 +74,7 @@
       </div>
    </header>
    <section class="top-dishes">
-      <div class="top-dishes__title title">Choose & Enjoy</div>
+      <h2 class="top-dishes__title title">Choose & Enjoy</h2>
       <div class="top-dishes__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
          incididunt ut labore et dolore magna
          aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
@@ -83,7 +84,7 @@
             <div class="dish-item__image">
                <div class="dish-image-1"></div>
             </div>
-            <div class="dish-item__title">Lorem ipsum dolor</div>
+            <h3 class="dish-item__title">Lorem ipsum dolor</h3>
             <div class="dish-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</div>
             <button class="dish-item__order-btn">Order Now</button>
          </div>
@@ -91,7 +92,7 @@
             <div class="dish-item__image">
                <div class="dish-image-2"></div>
             </div>
-            <div class="dish-item__title">Lorem ipsum dolor</div>
+            <h3 class="dish-item__title">Lorem ipsum dolor</h3>
             <div class="dish-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</div>
             <button class="dish-item__order-btn">Order Now</button>
          </div>
@@ -99,15 +100,15 @@
             <div class="dish-item__image">
                <div class="dish-image-3"></div>
             </div>
-            <div class="dish-item__title">Lorem ipsum dolor</div>
+            <h3 class="dish-item__title">Lorem ipsum dolor</h3>
             <div class="dish-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</div>
             <button class="dish-item__order-btn">Order Now</button>
          </div>
       </div>
    </section>
    <section class="events">
-      <div class="events__pretitle">Discover</div>
-      <div class="events__title title">Upcoming Events</div>
+      <h2 class="events__pretitle">Discover</h2>
+      <h2 class="events__title title">Upcoming Events</h2>
       <div class="events__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
          incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
          maecenas accumsan lacus vel facilisis.</div>
@@ -133,43 +134,31 @@
       <div class="try-today__block try-today__block-1">
          <div class="try-block try-block_big">
             <div class="try-block__pretitle try-block__pretitle_big">Try it today</div>
-            <div class="try-block__title try-block__title_big">Most <br> Popular <br> Pasta</div>
+            <h2 class="try-block__title try-block__title_big">Most <br> Popular <br> Pasta</h2>
          </div>
       </div>
       <div class="try-today__block try-today__block-2">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
-            <div class="try-block__title">More fun <br> more taste</div>
+            <h2 class="try-block__title">More fun <br> more taste</h2>
          </div>
       </div>
       <div class="try-today__block try-today__block-3">
          <div class="try-block">
             <div class="try-block__pretitle">Try it today</div>
-            <div class="try-block__title">Fresh & chili</div>
+            <h2 class="try-block__title">Fresh & chili</h2>
          </div>
       </div>
       <div class="no-float"></div>
    </section>
    <section class="booking">
-      <div class="booking__pretitle">Reservation</div>
-      <div class="booking__title title">Book your table</div>
+      <h2 class="booking__pretitle">Reservation</h2>
+      <h3 class="booking__title title">Book your table</h3>
       <form action="#" method="GET" class="booking__form">
-         <!-- action:
-            адрес ресурса, где будет обрабатываться введенная форма
-
-               method:
-            GET (умолч) -передать в браузерную строку в формате [имя параметра] = [назначение параметра]&[следующая][пара]
-            POST - позволяет передать больше, до 4кб, передача анонимна и не отражается. Например, логин и пароль-->
-         <input type="text" name="guest-name" placeholder=" Name">
-         <!--type = чекбоксы, радио, пароль, емейл и submit! последний - чтоб отправить данные на сервак по методу в action
-               value - значение, которое будет передано на сервер 
-
-                  target:
-               как будут отображены результаты, тут или в новой вкладке. по умолчанию тут
-            -->
+         <input type="text" name="guest-name" placeholder="Name">         
          <input type="email" name="email" placeholder="Email">
          <input type="text" name="date" placeholder="Date">
-         <input type="time" name="time" placeholder=" Time">
+         <input type="text" name="time" placeholder=" Time">
          <input type="number" name="number-of-persons" placeholder="People">
          <input type="submit" name="submit" value="Find a table" class="booking-submit">
       </form>
@@ -197,15 +186,10 @@
          </div>
       </div>
    </footer>
+
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <script src="js/slick-slider-init-file.js"></script>
-   <script>
-      let dummy = function () {
-         return;
-      }
-      console.log(dummy)
-   </script>
 </body>
 
 </html>
