--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <div class="navbar-top-row">
             <div class="navbar-top-row__logo">
                <img src="images/icons/Main-logo.png" alt="Main-logo">
-               <h1 >Food4you food for you Pizza restaurant</h1>
+               <h1>Food4you food for you Pizza restaurant</h1>
             </div>
             <div class="navbar-top-row__phone">
                <div class="navbar-phone">
@@ -28,6 +28,9 @@
                   </div>
                </div>
             </div>
+            <a href="#" class="navbar-top-row__burger">
+               <img src="/images/icons/burger-icon.svg" alt="menu-button">
+            </a>
          </div>
          <nav class="navbar-nav-row">
             <ul class="navbar-nav-row__ul">
@@ -155,7 +158,7 @@
       <h2 class="booking__pretitle">Reservation</h2>
       <h3 class="booking__title title">Book your table</h3>
       <form action="#" method="GET" class="booking__form">
-         <input type="text" name="guest-name" placeholder="Name">         
+         <input type="text" name="guest-name" placeholder="Name">
          <input type="email" name="email" placeholder="Email">
          <input type="text" name="date" placeholder="Date">
          <input type="text" name="time" placeholder=" Time">
@@ -190,6 +193,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <script src="js/slick-slider-init-file.js"></script>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
