--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
    <meta charset="UTF-8">
@@ -28,9 +28,9 @@
                   </div>
                </div>
             </div>
-            <a href="#" class="navbar-top-row__burger">
+            <div class="navbar-top-row__burger">
                <img src="/images/icons/burger-icon.svg" alt="menu-button">
-            </a>
+            </div>
          </div>
          <nav class="navbar-nav-row">
             <ul class="navbar-nav-row__ul">
