--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                </div>
             </div>
             <div class="navbar-top-row__burger">
-               <img src="images/icons/burger-icon.svg" alt="menu-button">
+               <div class="burger-container"></div>
             </div>
          </div>
-         <nav class="navbar-nav-row">
+         <nav class="navbar-nav-row">           
             <ul class="navbar-nav-row__ul">
                <li class="navbar-nav-row__li"><a href="#">home</a></li>
                <li class="navbar-nav-row__li"><a href="#">menu</a></li>
