--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                   </div>
                </div>
             </div>
-            <div class="navbar-top-row__burger">
-            </div>
+            <div class="navbar-top-row__burger">menu-burger</div>
+            <div class="navbar-top-row__shield"></div>
          </div>
          <nav class="navbar-nav-row">
             <ul class="navbar-nav-row__ul">
@@ -45,7 +45,6 @@
             <div class="hero-article__question">Are You Hungry?</div>
             <div class="hero-article__title title">Don't Wait!</div>
             <h2 class="hero-article__subtitle">Let start to order food now</h2>
-            <div class="hero-article__line"></div>
             <div class="hero-article__sale">
                <h3 class="hero-article__sale-left-text">This Monday Happy Hours</h3>
                <h3 class="hero-article__sale-right-text">1+1=3</h3>
