--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <title>Food 4 you</title>
-   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-   <link href="css/reset.css" rel="stylesheet" type="text/css">
+   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -191,7 +189,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <script src="js/slick-slider-init-file.js"></script>
-   <script src="js/main.js"></script>
+   <script src="js/index.js"></script>
 </body>
 
 </html>
