fix: rename main icon for correct source

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <div class="header__navbar">
          <div class="navbar-top-row">
             <div class="navbar-top-row__logo">
-               <img src="images/icons/Main-logo.png" alt="Main-logo">
+               <img src="images/icons/main-logo.png" alt="Main-logo">
                <h1>Food4you food for you Pizza restaurant</h1>
             </div>
             <div class="navbar-top-row__phone">
